Added cusotm tree command supporting Oak, Spruce, Acacia, Dark_Oak, Birch trees and fixed some bugs

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,3 +21,9 @@ commands:
   worldname:
     description: "Set the world name for TreeChopper."
     usage: "/treechopper worldname <name>"
+  reward:
+    description: "Set the reward amount for TreeChopper."
+    usage: "/treechopper reward <reward_amount>"
+  type:
+    description: "Set the tree type for TreeChopper."
+    usage: "/treechopper type <tree_type>"
